examples/datalog/10_edge_cases/34_negative_values.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_negative
Knowledge graph 'test_negative' created.
Switched to knowledge graph: test_negative
> .kg use test_negative
Switched to knowledge graph: test_negative
> +data[(-5, 10), (5, -10), (-5, -10), (5, 10)].
Inserted 4 fact(s) into 'data'.
> sums(X, Y, S) :- data(X, Y), S = X + Y.
Script error: Query execution failed: Unsafe rule: Atom { relation: "sums", args: [Variable("X"), Variable("Y"), Variable("S")] }. Variables ["S"] in head do not appear in positive body atoms.
